--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=7.1.1",
-        "laravel/lumen-framework": "^5.6",
+        "laravel/lumen-framework": "5.5.*|5.6.",
         "pragmarx/google2fa-laravel": "^0.2.0",
         "dusterio/lumen-passport": "^0.2.4",
         "prodevel/laravel-classes" : "^0.4"
