--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Promise Ekorko",
+            "name": "prog_24",
             "email": "promise.ekoriko@lshtm.ac.uk",
             "role": "Technical Lead"
         }
     ],
     "require": {
-        "php": ">=7.1.1",
-        "laravel/lumen-framework": "5.5.*|5.6.",
+        "php": ">=5.6.4",
+        "laravel/lumen-framework": "~5.5|~5.6",
         "pragmarx/google2fa-laravel": "^0.2.0",
         "dusterio/lumen-passport": "^0.2.4",
         "prodevel/laravel-classes" : "^0.4"
